refact : 코드 정리